--- a/index.html
+++ b/index.html
@@ -3,31 +3,16 @@ layout: default
 title: praxis
 categories: home
 ---
-<div class="subtitle wow">
-  <p>Decolonize<br>
-    Your<br>
-    Attention</p>
-</div>
-<div class="instructions">
-  {% for post in site.categories.study %}
-  {% if post.status contains "redirect" %}
-  {% else %}
-  <a class="next wow" href="{{ post.url }}" class="latest cover"
-    style="background-image: url(/assets/images/{{ post.cover}})">
-    <h3>Study:</h3>
-    <span class="main">{{ post.title }}</span>
-    <span class="slogan">{{ post.description }}</span>
+<h1>{{site.title}}</h1>
+<h3>{{site.description}}</h3>
+
+<ol>
+{% for post in site.posts %}
+<li>
+  <a href="{{ post.url }}">
+    <h3>{{ post.title }}</h3>
   </a>
-  {% endif %}
+  <p>{{ post.description }}</p>
+</li>
   {% endfor %}
-  {% for post in site.categories.article %}
-  {% if post.status contains "published" %}
-  <a class="next wow" href="{{ post.url }}" class="latest cover"
-    style="background-image: url(/assets/images/{{ post.cover }})">
-    <h3>Article:</h3>
-    <span class="main">{{ post.title }}</span>
-    <span class="slogan">{{ post.description }}</span>
-  </a>
-  {% endif %}
-  {% endfor %}
-</div>
+</ol>
