--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: praxis
+title: Bushwick Ayuda Mutua
 categories: home
 ---
 
@@ -9,7 +9,7 @@ categories: home
 <h3>{{site.description}}</h3>
 
 
-
+<!-- 
 <ol>
 {% for post in site.posts %}
 <li>
@@ -19,4 +19,4 @@ categories: home
   <p>{{ post.description }}</p>
 </li>
   {% endfor %}
-</ol>
+</ol> -->
