shrinking logo on scroll

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ categories: home
 					</span>
 				</div>
 				<div class="title">Donate to Bushwick Ayuda Mutua</div>
-				<div class="donate-container">
+				<div class="donate-container d-flex">
 					<div class="donate">
 						<span>Donate</span>
 					</div>
