hooking up links, fixing about issue with posts

--- a/about.html
+++ b/about.html
@@ -134,13 +134,13 @@ categories: about
             <div class="title">Be a part of our mission!</div>
             <div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-space-evenly">
                 <div class="donate">
-                    <span>Donate</span>
+                    <a href="https://opencollective.com/bushwick-ayuda-mutua">Donate</a>
                 </div>
                 <div class="donate">
-                    <span>Volunteer</span>
+                    <a href="https://bit.ly/BAM-sign-up">Volunteer</a>
                 </div>
                 <div class="donate">
-                    <span>Request Help</span>
+                    <a href="https://bit.ly/BAMrequest">Request Help</a>
                 </div>
             </div>
         </div>
