--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ categories: home
 				<div class="title">Donate to Bushwick Ayuda Mutua</div>
 				<div class="donate-container d-flex">
 					<div class="donate">
-						<span>Donate</span>
+						<a href="https://opencollective.com/bushwick-ayuda-mutua" >Donate</a>
 					</div>
 				</div>
 			</div>
