--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ categories: about
                     <img id="community_image" src="assets/images/community.svg"/>
                     <div class="title font-grif-bold">About BAM</div>
 
-                    <p class="pt-3 pb-3 subtitle">Bushwick Ayuda Mutua was born out of the 2020 COVID-19 crisis in response to a lack of 
+                    <p class="pt-3 pb-3 subtitle">Bushwick Ayuda Mutua (BAM) was born out of the 2020 COVID-19 crisis in response to a lack of 
                         government support and resources for the most vulnerable in our community.
                     </p>
 
@@ -22,6 +22,8 @@ categories: about
                         is a deliberate and intentional community that prioritizes the marginalized, and aims to empower,
                         prioritize, and give space to long-time residents.
                     </p>
+
+                    <p class="pt-3 text">100% volunteer run and community funded.</p>
 
                     <div class="connect pt-4 pt-lg-5">
                         <div class="font-grif-bold pb-1 connect-text">
@@ -32,7 +34,7 @@ categories: about
                             <img class="arrow-img" src="/assets/images/arrow.svg"/>
                         </div>
                         <div class="link pt-3">
-                            <span>Follow Us On Instagram</span>
+                            <span><a href="https://instagram.com/bushwickayudamutua">Follow Us On Instagram</a></span>
                             <img class="arrow-img" src="/assets/images/arrow.svg"/>
                         </div>
                     </div>
@@ -78,8 +80,25 @@ categories: about
                     </div>
 
                     <div id="vision" class="collapse">
+                        <div class="header pb-2" style="font-size:30px;">Unido El Pueblo Jamas Sera Vencido</div>
                         <p class="pb-2">
-                            Vision TBD
+                            We aspire to live in a community where no one lives in hunger, where people have access to livable wages, affordable, safe housing, and health care. 
+                        </p>
+
+                        <p class="pb-2">
+                            We aspire to live in a community where every person and family lives autonomous and empowered lives.
+                        </p>
+
+                        <p class="pb-2">
+                            We aspire to have a system in place that supports the community, from within the community. 
+                        </p>
+
+                        <p class="pb-2">
+                            We aspire to be able to offer help, when neighbors need help. 
+                        </p>
+
+                        <p class="pb-2">
+                            We aspire to create a network of individuals and community organizations that can react to federal and local policies that put community members at risk.  
                         </p>
                     </div>
                 </div>
@@ -96,8 +115,30 @@ categories: about
 
                     <div id="values" class="collapse">
                         <p class="pb-2">
-                            values TBD
+                            We are:
                         </p>
+                        <ul>
+                            <li>
+                                <p>
+                                    <span style="font-weight:bold">Democratically-run</span> - Decentralized, horizontal model where decision-making is collective.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span style="font-weight:bold;">Inclusion, diversity and anti-discrimination</span> - We are anti-racist, anti-ableist, anti-sexist, anti-homophobic, anti-transphobic, anti-xenophobic, anti-ageist, anti-classist, and anti-fatphobic. Our efforts are towards autonomy and accessibility, and our priority is providing accessibility to those left furthest from it.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span style="font-weight:bold;">Culturally-sensitive</span> - We believe that no one is illegal on stolen land. This is a space where all languages, sexual orientation, genders, and races should have a voice.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span style="font-weight:bold;">Equity</span> - We believe in not just equality, but EQUITY. We thoughtfully uplift the voices that need to be heard, in place of the ones often and only heard.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
@@ -113,7 +154,10 @@ categories: about
 
                     <div id="partners" class="collapse">
                         <p class="pb-2">
-                            partners TBD
+                            <a href="https://www.milmundosbooks.com/">Mil Mundos</a>: a bilingual book store that celebrates Black, Latinx, and indigenous heritage. Operates our drop off center / depot.
+                        </p>
+                        <p class="pb-2">
+                            <a href="https://www.facebook.com/Latinos-Unidos-Bushwick-108019350914635/?ref=nf&hc_ref=ARRODYNmLfxJg0rcR1pffIkRLbi9iIZcd-Kmg4zaOTkwhTKl8BRmpoCm-lqextb3Mus">Latinos Americanos Unidos</a>: community organization for over 30 years. Hosts us on a weekly basis for grocery packing and pick up. 
                         </p>
                     </div>
                 </div>
@@ -149,15 +193,15 @@ categories: about
     <div class="footer-inner">
         <div class="d-lg-flex justify-content-lg-between">
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-1 order-lg-2">
-                <span class="footer-link">Facebook</span>
-                <span class="footer-link">Twitter</span>
-                <span class="footer-link">Instagram</span>
+                <span class="footer-link"><a href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
+                <span class="footer-link"><a href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
+                <span class="footer-link"><a href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
             </div>
 
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
                 <span class="footer-link">2020 BAM. All Rights Reserved</span>
-                <span class="footer-link">Privacy Policy</span>
-                <span class="footer-link">Tech & Data Policy</span>
+                <div class="footer-link"><a href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
+                <!-- <span class="footer-link">Tech & Data Policy</span> -->
             </div>
         </div>
 
