--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ categories: home
 					<span class="span lang-text">Spanish Test</span>
 				</div>
 				<div class="learn-more link">
-					<span class="eng lang-text active">Learn More</span>
+					<span class="eng lang-text active"><a href="/about">Learn More</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
 					<span class="span lang-text">Spanish tbd</span>
 				</div>
@@ -36,37 +36,49 @@ categories: home
 	<div class="carousel-container">
 		<div id="pics_carousel" class="owl-carousel owl-theme">
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel1.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel1.jpg">
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel2.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel2.jpg">
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel3.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel3.jpg">
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel4.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel4.jpg">
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel5.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel5.jpg">
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg"></div>
+				<div class="item-bg">
+					<img src="./assets/carousel/carousel6.jpg">
+				</div>
 				<div class="img-container">
 					<img src="./assets/carousel/carousel6.jpg">
 				</div>
@@ -83,9 +95,9 @@ categories: home
 			</div>
 			<div class="text-container">
 				<div class="title pb-5">Sign up to <span class="underline">volunteer</span></div>
-				<p class="text pb-3">We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech, tell us about you and how you can help.</p>
+				<p class="text pb-3">We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech - tell us about you and how you can help.</p>
 				<div class="link">
-					<span>Get Involved</span>
+					<span><a href="https://bit.ly/BAM-sign-up">Get Involved</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
 				</div>
 			</div>
@@ -99,7 +111,7 @@ categories: home
 				<div class="title pb-3">Get <span class="underline">assistance</span></div>
 				<p class="text pb-3">We offer food assistance and access to essential items like feminine products, soap, diapers, and baby food. We make referrals to organizations we trust can support you in legal support, housing assistance, medical assistance, and more.</p>
 				<div class="link">
-					<span>Request help</span>
+					<span><a href="https://bit.ly/BAMrequest">Request help</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
 				</div>
 			</div>
@@ -114,7 +126,7 @@ categories: home
 			<div class="item container">
 				<div class="text-container">
 					<div class="text">
-						Living in a community where your comfort is secure and the comfort of others doesn’t matter is not a community. A community only becomes a community once folks are watching out for each other and are aware of each other's conditions and are able to take care of each other.
+						<p>Living in a community where your comfort is secure and the comfort of others doesn’t matter is not a community. A community only becomes a community once folks are watching out for each other and are aware of each other's conditions and are able to take care of each other.</p>
 					</div>
 					<div class="person">
 						Maria, BAM Coordinator
@@ -125,7 +137,7 @@ categories: home
 			<div class="item container">
 				<div class="text-container">
 					<div class="text">
-						El futuro de Bushwick, lo veo como una comunidad resiliente que se cuide y se protege sola, que se une para proveerse a si misma y salir adelante.
+						<p>El futuro de Bushwick, lo veo como una comunidad resiliente que se cuide y se protege sola, que se une para proveerse a si misma y salir adelante.</p>
 					</div>
 					<div class="person">
 						Sebastian, BAM Coordinator
@@ -136,7 +148,7 @@ categories: home
 			<div class="item container">
 				<div class="text-container">
 					<div class="text">
-						Pues más que nada yo he visto pobreza. Más para las comunidades Hispanas, personas que no hablan inglés, no tienen suficiente información de tanta ayuda y programas que ofrece la ciudad y organizaciones. Pero sobre todo discriminacion hacia las personas humildes. Eso es lo que yo he visto. Pero he visto también cosas buenas, en donde no importa tu color, religión de donde seas, hay ayuda para todos. Eso es lo que yo he visto.
+						<p>Pues más que nada yo he visto pobreza. Más para las comunidades Hispanas, personas que no hablan inglés, no tienen suficiente información de tanta ayuda y programas que ofrece la ciudad y organizaciones. Pero sobre todo discriminacion hacia las personas humildes. Eso es lo que yo he visto. Pero he visto también cosas buenas, en donde no importa tu color, religión de donde seas, hay ayuda para todos. Eso es lo que yo he visto.</p>
 					</div>
 					<div class="person">
 						Bushwick Neighbor
@@ -147,7 +159,7 @@ categories: home
 			<div class="item container">
 				<div class="text-container">
 					<div class="text">
-						People from Bushwick should get more involved with the work that we are doing with BAM because you know we are all neighbors, we are all in this together, but some parts of this community are really hurting and need help and I think it is important to really draw together and find communal strength.
+						<p>People from Bushwick should get more involved with the work that we are doing with BAM because you know we are all neighbors, we are all in this together, but some parts of this community are really hurting and need help and I think it is important to really draw together and find communal strength.</p>
 					</div>
 					<div class="person">
 						Mattie, BAM Coordinator
@@ -178,15 +190,15 @@ categories: home
 		<div class="footer-inner">
 			<div class="d-lg-flex justify-content-lg-between">
 				<div class="d-flex flex-column flex-lg-row align-items-center links-container order-1 order-lg-2">
-					<div class="footer-link">Facebook</div>
-					<div class="footer-link">Twitter</div>
-					<div class="footer-link">Instagram</div>
+					<span class="footer-link"><a href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
+                	<span class="footer-link"><a href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
+                	<span class="footer-link"><a href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
 				</div>
 
 				<div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
 					<div class="footer-link no-underline">2020 BAM. All Rights Reserved</div>
-					<div class="footer-link">Privacy Policy</div>
-					<div class="footer-link">Tech & Data Policy</div>
+					<div class="footer-link"><a href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
+					<!-- <div class="footer-link">Tech & Data Policy</div> -->
 				</div>
 			</div>
 		</div>
