--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@ categories: home
 		<div class="container d-lg-flex align-items-lg-center min-height-100" id="header_pane">
 			<div class="content-container">
 				<div class="title">Bushwick</br>Ayuda Mutua</div>
-				<div class="subtitle pt-4 pb-4">
+				<div class="subtitle pt-3 pb-4">
+					<span class="eng lang-text active">A network of Bushwick neighbors supporting neighbors.</span>
+					<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
+				</div>
+				<div class="text pt-4 pb-4">
 					<span class="eng lang-text active">We are a collective group of Bushwick residents, long-term residents and recent arrivals, rooted in the mission of creating a local network for neighbors to support neighbors.</span>
-					<span class="span lang-text">Spanish Test</span>
+					<span class="span lang-text">Somos une colective de residentes de Bushwick, desde aquelles que recién nos unimos a la comunidad hasta residentes de largo plazo, con la misión de crear una red de vecines ayudando a vecines.</span>
 				</div>
 				<div class="learn-more link">
 					<span class="eng lang-text active"><a href="/about">Learn More</a></span>
+					<span class="span lang-text"><a href="/about">Spanish tbd</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
-					<span class="span lang-text">Spanish tbd</span>
 				</div>
 			</div>
 		</div>
@@ -27,7 +31,7 @@ categories: home
 		<div class="container network" style="padding-bottom:5rem;">
 			<div class="comment-text network">
 				<span class="eng lang-text active">A network of Bushwick neighbors supporting neighbors.</span>
-				<span class="span lang-text">Spanish tbd</span>
+				<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
 			</div>
 		</div>
 	</div>
@@ -89,13 +93,30 @@ categories: home
 
 	<!-- Requests -->
 	<div class="requests" style="margin-bottom:150px;">
+		<div class="logo" id="hands_mobile">
+			<img src="/assets/images/hands.svg"/>
+		</div>
 		<div class="container request pt-5 pb-5" id="volunteer">
 			<div class="logo">
 				<img src="/assets/images/globe.svg"/>
 			</div>
 			<div class="text-container">
-				<div class="title pb-5">Sign up to <span class="underline">volunteer</span></div>
-				<p class="text pb-3">We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech - tell us about you and how you can help.</p>
+				<div class="title pb-5">
+					<span class="lang-text eng active">
+						Sign up to <a class="underline" href="https://bit.ly/BAM-sign-up">volunteer</a>
+					</span>
+					<span class="lang-text span">
+						Como alistarte como <a class="underline" href="https://bit.ly/BAM-sign-up">voluntarie</a>
+					</span>
+				</div>
+				<p class="text pb-3">
+					<span class="lang-text eng active">
+						We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech - tell us about you and how you can help.</p>
+					</span>
+					<span class="lang-text span">
+						Siempre estamos buscando el apoyo de más vecines que comparten nuestra misma misión. Necesitamos apoyo en distribución de víveres, comunicación con vecines, aquelles con experiencia en relaciones públicas, recaudación de fondos, finanzas y personas con experiencia en tecnología— ¡cuéntanos sobre ti y cómo puedes apoyar nuestro esfuerzo!</p>
+					</span>
+				</p>
 				<div class="link">
 					<span><a href="https://bit.ly/BAM-sign-up">Get Involved</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
@@ -104,12 +125,26 @@ categories: home
 		</div>
 
 		<div class="container request pt-5 pb-5" id="assistance">
-			<div class="logo">
+			<div class="logo" id="hands_desktop">
 				<img src="/assets/images/hands.svg"/>
 			</div>
 			<div class="text-container">
-				<div class="title pb-3">Get <span class="underline">assistance</span></div>
-				<p class="text pb-3">We offer food assistance and access to essential items like feminine products, soap, diapers, and baby food. We make referrals to organizations we trust can support you in legal support, housing assistance, medical assistance, and more.</p>
+				<div class="title pb-3">
+					<span class="eng lang-text active">
+						Get <a class="underline" href="https://bit.ly/BAMrequest">assistance</a>
+					</span>
+					<span class="span lang-text">
+						Cómo recibir <a class="underline" href="https://bit.ly/BAMrequest">asistencia</a>
+					</span>
+				</div>
+				<p class="text pb-3">
+					<span class="eng lang-text active">
+						We offer food assistance and access to essential items like feminine products, soap, diapers, and baby food. We make referrals to organizations we trust can support you in legal support, housing assistance, medical assistance, and more.
+					</span>
+					<span class="span lang-text">
+						Ofrecemos asistencia de víveres y acceso a artículos esenciales como productos femeninos, jabón, pañales, y comida para bebés. También ofrecemos referencias a otras organizaciones en las cuales confiamos que puedan brindar apoyo legal, médico, asistencia de vivienda, entre otras necesidades.
+					</span>
+				</p>
 				<div class="link">
 					<span><a href="https://bit.ly/BAMrequest">Request help</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
@@ -178,10 +213,24 @@ categories: home
 						Want to support our mission?
 					</span>
 				</div>
-				<div class="title">Donate to Bushwick Ayuda Mutua</div>
+				<div class="title">
+					<span class="lang-text eng active">
+						Donate to Bushwick Ayuda Mutua
+					</span>
+					<span class="lang-text span">
+						Dona a Bushwick Ayuda Mutua
+					</span>
+				</div>
 				<div class="donate-container d-flex">
 					<div class="donate">
-						<a href="https://opencollective.com/bushwick-ayuda-mutua" >Donate</a>
+						<a href="https://opencollective.com/bushwick-ayuda-mutua">
+							<span class="lang-text eng active">
+								Donate
+							</span>
+							<span class="lang-text span">
+								Donar
+							</span>
+						</a>
 					</div>
 				</div>
 			</div>
