--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@ categories: home
 
 	<!-- Carousel-->
 	<div class="carousel-container">
+		<div id="pics_spinner" class="spinner-border" role="status">
+			<span class="sr-only">Loading...</span>
+		</div>
 		<div id="pics_carousel" class="owl-carousel owl-theme">
 			<div class="item">
 				<div class="item-bg">
 					<img src="./assets/carousel/carousel1.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel1.jpg">
+					<img src="" data-src="./assets/carousel/carousel1.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 			<div class="item">
@@ -52,7 +58,10 @@ categories: home
 					<img src="./assets/carousel/carousel2.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel2.jpg">
+					<img src="" data-src="./assets/carousel/carousel2.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 			<div class="item">
@@ -60,7 +69,10 @@ categories: home
 					<img src="./assets/carousel/carousel3.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel3.jpg">
+					<img src="" data-src="./assets/carousel/carousel3.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 			<div class="item">
@@ -68,7 +80,10 @@ categories: home
 					<img src="./assets/carousel/carousel4.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel4.jpg">
+					<img src="" data-src="./assets/carousel/carousel4.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 			<div class="item">
@@ -76,7 +91,10 @@ categories: home
 					<img src="./assets/carousel/carousel5.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel5.jpg">
+					<img src="" data-src="./assets/carousel/carousel5.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 			<div class="item">
@@ -84,7 +102,10 @@ categories: home
 					<img src="./assets/carousel/carousel6.jpg">
 				</div>
 				<div class="img-container">
-					<img src="./assets/carousel/carousel6.jpg">
+					<img src="" data-src="./assets/carousel/carousel6.jpg">
+					<!-- <div class="spinner-border" role="status">
+						<span class="sr-only">Loading...</span>
+					</div> -->
 				</div>
 			</div>
 		</div>
