--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ categories: home
 			</div>
 			<div class="item">
 				<div class="item-bg">
-					<img src="./assets/carousel/carousel5.jpg">
+					<img src="./assets/carousel/carousel5.JPG">
 				</div>
 				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel5.jpg">
+					<img src="" data-src="./assets/carousel/carousel5.JPG">
 					<!-- <div class="spinner-border" role="status">
 						<span class="sr-only">Loading...</span>
 					</div> -->
@@ -99,10 +99,10 @@ categories: home
 			</div>
 			<div class="item">
 				<div class="item-bg">
-					<img src="./assets/carousel/carousel6.jpg">
+					<img src="./assets/carousel/carousel6.JPG">
 				</div>
 				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel6.jpg">
+					<img src="" data-src="./assets/carousel/carousel6.JPG">
 					<!-- <div class="spinner-border" role="status">
 						<span class="sr-only">Loading...</span>
 					</div> -->
