fixing extra p in volunteer request box

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ categories: home
 				<img src="/assets/images/globe.svg"/>
 			</div>
 			<div class="text-container">
-				<div class="title pb-5">
+				<div class="title pb-3">
 					<span class="lang-text eng active">
 						Sign up to <a class="underline" href="https://bit.ly/BAM-sign-up">volunteer</a>
 					</span>
@@ -132,10 +132,10 @@ categories: home
 				</div>
 				<p class="text pb-3">
 					<span class="lang-text eng active">
-						We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech - tell us about you and how you can help.</p>
+						We are always looking for more neighbors to support our mission. From on-site food handling to connecting with folks in need of assistance, PR, awareness building, fundraising, finance, and tech - tell us about you and how you can help.
 					</span>
 					<span class="lang-text span">
-						Siempre estamos buscando el apoyo de más vecines que comparten nuestra misma misión. Necesitamos apoyo en distribución de víveres, comunicación con vecines, aquelles con experiencia en relaciones públicas, recaudación de fondos, finanzas y personas con experiencia en tecnología— ¡cuéntanos sobre ti y cómo puedes apoyar nuestro esfuerzo!</p>
+						Siempre estamos buscando el apoyo de más vecines que comparten nuestra misma misión. Necesitamos apoyo en distribución de víveres, comunicación con vecines, aquelles con experiencia en relaciones públicas, recaudación de fondos, finanzas y personas con experiencia en tecnología— ¡cuéntanos sobre ti y cómo puedes apoyar nuestro esfuerzo!
 					</span>
 				</p>
 				<div class="link">
