--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@ categories: about
                         </div>
                         <div class="link pt-3">
                             <span class="eng lang-text active">
-                                <a href="https://instagram.com/bushwickayudamutua">Follow Us On Instagram</a>
+                                <a target="_blank" href="https://instagram.com/bushwickayudamutua">Follow Us On Instagram</a>
                             </span>
                             <span class="span lang-text">
-                                <a href="mailto:bushwickayudamutua@gmail.com">Síguenos en Instagram</a>
+                                <a target="_blank" href="https://instagram.com/bushwickayudamutua">Síguenos en Instagram</a>
                             </span>
                             <img class="arrow-img" src="/assets/images/arrow.svg"/>
                         </div>
@@ -282,18 +282,18 @@ categories: about
                     <div id="partners" class="collapse about-content">
                         <p class="pb-2">
                             <span class="eng lang-text active">
-                                <a href="https://www.milmundosbooks.com/">Mil Mundos</a>: a bilingual book store that celebrates Black, Latinx, and indigenous heritage. Operates our drop off center / depot.
+                                <a target="_blank" href="https://www.milmundosbooks.com/">Mil Mundos</a>: a bilingual book store that celebrates Black, Latinx, and indigenous heritage. Operates our drop off center / depot.
                             </span>
                             <span class="span lang-text">
-                                <a href="https://www.milmundosbooks.com/">Mil Mundos</a>: Una librería que busca celebrar aquelles de descendencia Afroamericana, Latinx e Indigena. Desde aquí operamos nuestras entregas y recibos.
+                                <a target="_blank" href="https://www.milmundosbooks.com/">Mil Mundos</a>: Una librería que busca celebrar aquelles de descendencia Afroamericana, Latinx e Indigena. Desde aquí operamos nuestras entregas y recibos.
                             </span>
                         </p>
                         <p class="pb-2">
                             <span class="eng lang-text active">
-                                <a href="https://www.facebook.com/Latinos-Unidos-Bushwick-108019350914635/?ref=nf&hc_ref=ARRODYNmLfxJg0rcR1pffIkRLbi9iIZcd-Kmg4zaOTkwhTKl8BRmpoCm-lqextb3Mus">Latinos Americanos Unidos: </a>community organization for over 30 years. Hosts us on a weekly basis for grocery packing and pick up.
+                                <a target="_blank" href="https://www.facebook.com/Latinos-Unidos-Bushwick-108019350914635/?ref=nf&hc_ref=ARRODYNmLfxJg0rcR1pffIkRLbi9iIZcd-Kmg4zaOTkwhTKl8BRmpoCm-lqextb3Mus">Latinos Americanos Unidos: </a>community organization for over 30 years. Hosts us on a weekly basis for grocery packing and pick up.
                             </span>
                             <span class="span lang-text">
-                                <a href="https://www.facebook.com/Latinos-Unidos-Bushwick-108019350914635/?ref=nf&hc_ref=ARRODYNmLfxJg0rcR1pffIkRLbi9iIZcd-Kmg4zaOTkwhTKl8BRmpoCm-lqextb3Mus">Latinos Americanos Unidos: </a>es una organización dedicada a servir a la comunidad por más de 30 años. LAU ha prestado su espacio a Bushwick Ayuda Mutua para la distribución de víveres semanales.
+                                <a target="_blank" href="https://www.facebook.com/Latinos-Unidos-Bushwick-108019350914635/?ref=nf&hc_ref=ARRODYNmLfxJg0rcR1pffIkRLbi9iIZcd-Kmg4zaOTkwhTKl8BRmpoCm-lqextb3Mus">Latinos Americanos Unidos: </a>es una organización dedicada a servir a la comunidad por más de 30 años. LAU ha prestado su espacio a Bushwick Ayuda Mutua para la distribución de víveres semanales.
                             </span>
                         </p>
                     </div>
@@ -314,15 +314,20 @@ categories: about
             </div>
             <div class="title">Be a part of our mission!</div>
             <div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-space-evenly">
-                <div class="donate">
-                    <a href="https://opencollective.com/bushwick-ayuda-mutua">Donate</a>
-                </div>
-                <div class="donate">
-                    <a href="https://bit.ly/BAM-sign-up">Volunteer</a>
-                </div>
-                <div class="donate">
-                    <a href="https://bit.ly/BAMrequest">Request Help</a>
-                </div>
+                <a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
+                    <span class="lang-text eng active">
+                        Donate
+                    </span>
+                    <span class="lang-text span">
+                        Donar
+                    </span>
+                </a>
+                <a target="_blank" href="https://bit.ly/BAM-sign-up" class="donate">
+                    <span>Volunteer</span>
+                </a>
+                <a target="_blank" href="https://bit.ly/BAMrequest" class="donate">
+                    <span>Request Help</span>
+                </a>
             </div>
         </div>
     </div>
@@ -330,14 +335,14 @@ categories: about
     <div class="footer-inner">
         <div class="d-lg-flex justify-content-lg-between">
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-1 order-lg-2">
-                <span class="footer-link"><a href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
-                <span class="footer-link"><a href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
-                <span class="footer-link"><a href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
+                <span class="footer-link"><a target="_blank" href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
+                <span class="footer-link"><a target="_blank" href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
+                <span class="footer-link"><a target="_blank" href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
             </div>
 
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
                 <span class="footer-link">2020 BAM. All Rights Reserved</span>
-                <div class="footer-link"><a href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
+                <div class="footer-link"><a target="_blank" href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
                 <!-- <span class="footer-link">Tech & Data Policy</span> -->
             </div>
         </div>
