--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ categories: home
 ---
 
 	<div class="d-lg-flex header-container">
-		<div class="container d-lg-flex align-items-lg-center min-height-100" id="header_pane">
+		<div class="container d-lg-flex align-items-lg-center" id="header_pane">
 			<div class="content-container">
 				<div class="title">Bushwick</br>Ayuda Mutua</div>
 				<div class="subtitle pt-3 pb-4">
@@ -124,10 +124,10 @@ categories: home
 			<div class="text-container">
 				<div class="title pb-3">
 					<span class="lang-text eng active">
-						Sign up to <a class="underline" href="https://bit.ly/BAM-sign-up">volunteer</a>
+						Sign up to <a class="underline" target="_blank" href="https://bit.ly/BAM-sign-up">volunteer</a>
 					</span>
 					<span class="lang-text span">
-						Como alistarte como <a class="underline" href="https://bit.ly/BAM-sign-up">voluntarie</a>
+						Como alistarte como <a class="underline" target="_blank" href="https://bit.ly/BAM-sign-up">voluntarie</a>
 					</span>
 				</div>
 				<p class="text pb-3">
@@ -139,7 +139,7 @@ categories: home
 					</span>
 				</p>
 				<div class="link">
-					<span><a href="https://bit.ly/BAM-sign-up">Get Involved</a></span>
+					<span><a target="_blank" href="https://bit.ly/BAM-sign-up">Get Involved</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
 				</div>
 			</div>
@@ -152,10 +152,10 @@ categories: home
 			<div class="text-container">
 				<div class="title pb-3">
 					<span class="eng lang-text active">
-						Get <a class="underline" href="https://bit.ly/BAMrequest">assistance</a>
+						Get <a target="_blank" class="underline" href="https://bit.ly/BAMrequest">assistance</a>
 					</span>
 					<span class="span lang-text">
-						Cómo recibir <a class="underline" href="https://bit.ly/BAMrequest">asistencia</a>
+						Cómo recibir <a target="_blank" class="underline" href="https://bit.ly/BAMrequest">asistencia</a>
 					</span>
 				</div>
 				<p class="text pb-3">
@@ -167,7 +167,7 @@ categories: home
 					</span>
 				</p>
 				<div class="link">
-					<span><a href="https://bit.ly/BAMrequest">Request help</a></span>
+					<span><a target="_blank" href="https://bit.ly/BAMrequest">Request help</a></span>
 					<img class="arrow-img" src="/assets/images/arrow.svg"/>
 				</div>
 			</div>
@@ -199,7 +199,7 @@ categories: home
 						Sebastian, BAM Coordinator
 					</div>
 				</div>
-			</div>
+			</div> 
 
 			<div class="item container">
 				<div class="text-container">
@@ -243,16 +243,14 @@ categories: home
 					</span>
 				</div>
 				<div class="donate-container d-flex">
-					<div class="donate">
-						<a href="https://opencollective.com/bushwick-ayuda-mutua">
-							<span class="lang-text eng active">
-								Donate
-							</span>
-							<span class="lang-text span">
-								Donar
-							</span>
-						</a>
-					</div>
+					<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
+						<span class="lang-text eng active">
+							Donate
+						</span>
+						<span class="lang-text span">
+							Donar
+						</span>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -260,14 +258,14 @@ categories: home
 		<div class="footer-inner">
 			<div class="d-lg-flex justify-content-lg-between">
 				<div class="d-flex flex-column flex-lg-row align-items-center links-container order-1 order-lg-2">
-					<span class="footer-link"><a href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
-                	<span class="footer-link"><a href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
-                	<span class="footer-link"><a href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
+					<span class="footer-link"><a target="_blank" href="https://www.facebook.com/bushwickayuda ">Facebook</a></span>
+                	<span class="footer-link"><a target="_blank" href="https://twitter.com/BushwickAyuda ">Twitter</a></span>
+                	<span class="footer-link"><a target="_blank" href="https://instagram.com/bushwickayudamutua">Instagram</a></span>
 				</div>
 
 				<div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
 					<div class="footer-link no-underline">2020 BAM. All Rights Reserved</div>
-					<div class="footer-link"><a href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
+					<div class="footer-link"><a target="_blank" href="https://docs.google.com/document/d/1U-woPdAnN9vXQSP4Ew5dqb6g5yuNGrDZzNPJC3eyads/edit?usp=sharing ">Privacy Policy & Security Principles</a></div>
 					<!-- <div class="footer-link">Tech & Data Policy</div> -->
 				</div>
 			</div>
