sticker placements and image carousel improvements

--- a/index.html
+++ b/index.html
@@ -43,69 +43,66 @@ categories: home
 		</div>
 		<div id="pics_carousel" class="owl-carousel owl-theme">
 			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel1.jpg">
-				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel1.jpg">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
-				</div>
-			</div>
-			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel2.jpg">
-				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel2.jpg">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel1.jpg">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel1.jpg">
+					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel3.jpg">
-				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel3.jpg">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
-				</div>
-			</div>
-			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel4.jpg">
-				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel4.jpg">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel2.jpg">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel2.jpg">
+					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel5.JPG">
-				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel5.JPG">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel3.jpg">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel3.jpg">
+					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div class="item-bg">
-					<img src="./assets/carousel/carousel6.JPG">
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel4.jpg">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel4.jpg">
+					</div>
 				</div>
-				<div class="img-container">
-					<img src="" data-src="./assets/carousel/carousel6.JPG">
-					<!-- <div class="spinner-border" role="status">
-						<span class="sr-only">Loading...</span>
-					</div> -->
+			</div>
+			<div class="item">
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel5.JPG">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel5.JPG">
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="item-inner">
+					<div class="item-bg">
+						<img src="./assets/carousel/carousel6.JPG">
+					</div>
+					<div class="img-outer-container">
+						<img src="" data-src="./assets/carousel/carousel6.JPG">
+						<!-- <div class="spinner-border" role="status">
+							<span class="sr-only">Loading...</span>
+						</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
@@ -114,9 +111,9 @@ categories: home
 
 	<!-- Requests -->
 	<div class="requests" style="margin-bottom:150px;">
-		<div class="logo" id="hands_mobile">
+		<!-- <div class="logo" id="hands_mobile">
 			<img src="/assets/images/hands.svg"/>
-		</div>
+		</div> -->
 		<div class="container request pt-5 pb-5" id="volunteer">
 			<div class="logo">
 				<img src="/assets/images/globe.svg"/>
@@ -144,7 +141,9 @@ categories: home
 				</div>
 			</div>
 		</div>
-
+		<div class="logo" id="hands_mobile">
+			<img src="/assets/images/hands.svg"/>
+		</div>
 		<div class="container request pt-5 pb-5" id="assistance">
 			<div class="logo" id="hands_desktop">
 				<img src="/assets/images/hands.svg"/>
