--- a/about.html
+++ b/about.html
@@ -60,22 +60,18 @@ categories: about
                             </span>
                         </div>
                         <div class="link pt-3">
-                            <span class="eng lang-text active">
-                                <a href="mailto:bushwickayudamutua@gmail.com">Email Us</a>
-                            </span>
-                            <span class="span lang-text">
-                                <a href="mailto:bushwickayudamutua@gmail.com">Enviarnos un email</a>
-                            </span>
-                            <img class="arrow-img" src="/assets/images/arrow.svg"/>
+                            <a href="mailto:bushwickayudamutua@gmail.com">
+                                <span class="eng lang-text active">Email Us</span>
+                                <span class="span lang-text">Enviarnos un email</span>
+                                <div class="arrow">{% include arrowSVG.html %}</div>
+                            </a>
                         </div>
                         <div class="link pt-3">
-                            <span class="eng lang-text active">
-                                <a target="_blank" href="https://instagram.com/bushwickayudamutua">Follow Us On Instagram</a>
-                            </span>
-                            <span class="span lang-text">
-                                <a target="_blank" href="https://instagram.com/bushwickayudamutua">Síguenos en Instagram</a>
-                            </span>
-                            <img class="arrow-img" src="/assets/images/arrow.svg"/>
+                            <a target="_blank" href="https://instagram.com/bushwickayudamutua">
+                                <span class="eng lang-text active">Follow Us On Instagram</span>
+                                <span class="span lang-text">Síguenos en Instagram</span>
+                                <div class="arrow">{% include arrowSVG.html %}</div>
+                            </a>
                         </div>
                     </div>
                 </div>
