--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ categories: home
 					<span class="span lang-text">Somos une colective de residentes de Bushwick, desde aquelles que recién nos unimos a la comunidad hasta residentes de largo plazo, con la misión de crear una red de vecines ayudando a vecines.</span>
 				</div>
 				<div class="learn-more link">
-					<span class="eng lang-text active"><a href="/about">Learn More</a></span>
-					<span class="span lang-text"><a href="/about">Spanish tbd</a></span>
-					<img class="arrow-img" src="/assets/images/arrow.svg"/>
+					<a href="/about">
+						<span class="eng lang-text active">Learn More</span>
+						<span class="span lang-text">Aprende Mas</span>
+						<div class="arrow">{% include arrowSVG.html %}</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -136,8 +138,10 @@ categories: home
 					</span>
 				</p>
 				<div class="link">
-					<span><a target="_blank" href="https://bit.ly/BAM-sign-up">Get Involved</a></span>
-					<img class="arrow-img" src="/assets/images/arrow.svg"/>
+					<a target="_blank" href="https://bit.ly/BAM-sign-up">
+						<span>Get Involved</span>
+						<div class="arrow">{% include arrowSVG.html %}</div>
+					</a>					
 				</div>
 			</div>
 		</div>
@@ -166,8 +170,10 @@ categories: home
 					</span>
 				</p>
 				<div class="link">
-					<span><a target="_blank" href="https://bit.ly/BAMrequest">Request help</a></span>
-					<img class="arrow-img" src="/assets/images/arrow.svg"/>
+					<a target="_blank" href="https://bit.ly/BAMrequest">
+						<span>Request help</span>
+						<div class="arrow">{% include arrowSVG.html %}</div>
+					</a>
 				</div>
 			</div>
 		</div>
