adding final spanish

--- a/about.html
+++ b/about.html
@@ -304,8 +304,11 @@ categories: about
     <div class="container align-items-lg-center">
         <div class="content-container">
             <div class="subtitle pt-4 pb-4">
-                <span>
+                <span class="eng lang-text active">
                     Ready to get started?
+                </span>
+                <span class="span lang-text active">
+                    ¿Listx para comenzar?
                 </span>
             </div>
             <div class="title">Be a part of our mission!</div>
@@ -319,10 +322,20 @@ categories: about
                     </span>
                 </a>
                 <a target="_blank" href="https://bit.ly/BAM-sign-up" class="donate">
-                    <span>Volunteer</span>
+                    <span class="lang-text eng active">
+                        Volunteer
+                    </span>
+                    <span class="lang-text span">
+                        Voluntariado
+                    </span>
                 </a>
                 <a target="_blank" href="https://bit.ly/BAMrequest" class="donate">
-                    <span>Request Help</span>
+                    <span class="lang-text eng active">
+                        Request Help
+                    </span>
+                    <span class="lang-text span">
+                        Solicite Ayuda
+                    </span>
                 </a>
             </div>
         </div>
