--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ categories: home
 				</p>
 				<div class="link">
 					<a target="_blank" href="https://bit.ly/BAM-sign-up">
-						<span>Get Involved</span>
+						<span class="lang-text eng active">Get Involved</span>
+						<span class="lang-text span">Involúcrate</span>
 						<div class="arrow">{% include arrowSVG.html %}</div>
 					</a>					
 				</div>
@@ -171,7 +172,8 @@ categories: home
 				</p>
 				<div class="link">
 					<a target="_blank" href="https://bit.ly/BAMrequest">
-						<span>Request help</span>
+						<span class="lang-text eng active">Request Help</span>
+						<span class="lang-text span">Solicite Ayuda</span>
 						<div class="arrow">{% include arrowSVG.html %}</div>
 					</a>
 				</div>
@@ -235,8 +237,11 @@ categories: home
 		<div class="container align-items-lg-center">
 			<div class="content-container">
 				<div class="subtitle pt-4 pb-4">
-					<span>
+					<span class="lang-text eng active">
 						Want to support our mission?
+					</span>
+					<span class="lang-text span active">
+						¿Quieres apoyar nuestra misión?
 					</span>
 				</div>
 				<div class="title">
