--- a/about.html
+++ b/about.html
@@ -105,21 +105,19 @@ categories: about
                         <p class="pb-2">
                             <span class="eng lang-text active">
                                 We strive to ensure that residents of our community have their most basic needs met, as well access
-                                to resources and information to thrive during Covid-19 pandemic and beyond.
+                                to resources and information to thrive during COVID-19 pandemic and beyond.
                             </span>
                             <span class="span lang-text">
-                                Nuestro objetivo es asegurar que todos les residentes de la comunidad puedan satisfacer sus necesidades básicas — asimismo brindar acceso a recursos e información que puedan ayudar a navegar la pandemia, debido al Covid-19, y la vida en la ciudad.
+                                Nuestro objetivo es asegurar que todos les residentes de la comunidad puedan satisfacer sus necesidades básicas — asimismo brindar acceso a recursos e información que puedan ayudar a navegar la pandemia, debido al COVID-19, y la vida en la ciudad.
                             </span>
                         </p>
 
                         <p class="pb-5">
                             <span class="eng lang-text active">
-                                Currently, we serve Bushwick neighbors through neighbor-to-neighbor and grocery pick up days. 
-                                Thanks to grassroots donations and partnerships with community-based organizations and elected officials, 
-                                we are also able to provide access to Covid19 testing, census completion, legal support, and more.
+                                Currently, we serve Bushwick neighbors through the distribution of food, pantry items, and necessities like toilet paper, soap, and menstrual products.
                             </span>
                             <span class="span lang-text">
-                                Actualmente, nuestro esfuerzo está enfocado en apoyar a nuestres vecines con distribución de víveres, abarrotes, y necesidades básicas como papel higiénico, jabón, y productos femeninos.
+                                Actualmente, nuestro esfuerzo está enfocado en apoyar a nuestres vecines con distribución de víveres, abarrotes, y necesidades básicas como papel higiénico, jabón, y productos menstruales.
                             </span>
                         </p>
                     </div>
