--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ categories: home
 					<span class="lang-text eng active">
 						Want to support our mission?
 					</span>
-					<span class="lang-text span active">
+					<span class="lang-text span">
 						¿Quieres apoyar nuestra misión?
 					</span>
 				</div>
