one last spanish translation

--- a/about.html
+++ b/about.html
@@ -305,11 +305,14 @@ categories: about
                 <span class="eng lang-text active">
                     Ready to get started?
                 </span>
-                <span class="span lang-text active">
-                    ¿Listx para comenzar?
+                <span class="span lang-text">
+                    ¿Liste para comenzar?
                 </span>
             </div>
-            <div class="title">Be a part of our mission!</div>
+            <div class="title">
+                <span class="eng lang-text active">Be a part of our mission!</span>
+                <span class="span lang-text">¡Únete a Nuestra Misión!</span>
+            </div>
             <div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-space-evenly">
                 <a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
                     <span class="lang-text eng active">
