copy changes Dec 30

--- a/about.html
+++ b/about.html
@@ -226,10 +226,10 @@ categories: about
                             <li>
                                 <p>
                                     <span class="eng lang-text active">
-                                        <span style="font-weight:bold;">Inclusion, diversity and anti-discrimination</span> - We are anti-racist, anti-ableist, anti-sexist, anti-homophobic, anti-transphobic, anti-xenophobic, anti-ageist, anti-classist, and anti-fatphobic. Our efforts are towards autonomy and accessibility, and our priority is providing accessibility to those left furthest from it.
+                                        <span style="font-weight:bold;">Inclusion, diversity and anti-discrimination</span> - We are anti-racist, anti-ableist, anti-sexist, anti-homophobic, anti-transphobic, anti-xenophobic, anti-ageist, anti-classist, and anti-fatphobic. Our efforts are towards autonomy and accessibility, and our priority is providing accessibility to those left furthest from it. We stand with the Black community of Bushwick and those working towards police abolition. 
                                     </span>
                                     <span class="span lang-text">
-                                        <span style="font-weight:bold">Inclusión, diversidad y anti-discriminación</span> - Somos anti-racistas, anti-capacitistas, anti-transfobicos, anti-xenofobicos, anti-discriminación por edad, anti-clasistas, y somos anti-fobicos debido a la gordura/obesidad.  Estamos enfocados en promover acceso y autonomía a la comunidad, y nuestra prioridad es proporcionar acceso a aquelles que han sido marginalizades.  
+                                        <span style="font-weight:bold">Inclusión, diversidad y anti-discriminación</span> - Somos anti-racistas, anti-capacitistas, anti-transfobicos, anti-xenofobicos, anti-discriminación por edad, anti-clasistas, y somos anti-fobicos debido a la gordura/obesidad.  Estamos enfocados en promover acceso y autonomía a la comunidad, y nuestra prioridad es proporcionar acceso a aquelles que han sido marginalizades. Estamos con la comunidad afrodescendiente de Bushwick y a quienes trabajan por la abolición de la policía.  
                                     </span>
                                 </p>
                             </li>
@@ -276,7 +276,7 @@ categories: about
                     <div id="partners" class="collapse about-content">
                         <p class="pb-2">
                             <span class="eng lang-text active">
-                                <a target="_blank" href="https://www.milmundosbooks.com/">Mil Mundos</a>: a bilingual book store that celebrates Black, Latinx, and indigenous heritage. Operates our drop off center / depot.
+                                <a target="_blank" href="https://www.milmundosbooks.com/">Mil Mundos</a>: a bilingual book store that celebrates Black, Latinx, and Indigenous heritage. Operates our drop off center / depot.
                             </span>
                             <span class="span lang-text">
                                 <a target="_blank" href="https://www.milmundosbooks.com/">Mil Mundos</a>: Una librería que busca celebrar aquelles de descendencia Afroamericana, Latinx e Indigena. Desde aquí operamos nuestras entregas y recibos.
