--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ categories: home
 				<div class="title">Bushwick</br>Ayuda Mutua</div>
 				<div class="subtitle pt-3 pb-4">
 					<span class="eng lang-text active">A network of Bushwick neighbors supporting neighbors.</span>
-					<span class="span lang-text">Una red de vecenes en Bushwick apoyando a vecines.</span>
+					<span class="span lang-text">Bushwick Ayuda Mutua es una red de vecines respaldando a vecines en Bushwick.</span>
 				</div>
 				<div class="text pt-4 pb-4">
 					<span class="eng lang-text active">We are a collective group of Bushwick residents, long-term residents and recent arrivals, rooted in the mission of creating a local network for neighbors to support neighbors.</span>
@@ -126,7 +126,7 @@ categories: home
 						Sign up to <a class="underline" target="_blank" href="https://bit.ly/BAM-sign-up">volunteer</a>
 					</span>
 					<span class="lang-text span">
-						Como alistarte como <a class="underline" target="_blank" href="https://bit.ly/BAM-sign-up">voluntarie</a>
+						Como inscribirse como <a class="underline" target="_blank" href="https://bit.ly/BAM-sign-up">voluntarie</a>
 					</span>
 				</div>
 				<p class="text pb-3">
