--- a/index.html
+++ b/index.html
@@ -252,13 +252,21 @@ categories: home
 						Dona a Bushwick Ayuda Mutua
 					</span>
 				</div>
-				<div class="donate-container d-flex">
-					<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
+				<div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-center">
+					<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate donate-funds">
 						<span class="lang-text eng active">
-							Donate
+							Donate Funds
 						</span>
 						<span class="lang-text span">
-							Donar
+							Donar Fondos
+						</span>
+					</a>
+					<a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm" class="donate">
+						<span class="lang-text eng active">
+							Donate Item
+						</span>
+						<span class="lang-text span">
+							Donar Artículo
 						</span>
 					</a>
 				</div>
